--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -17,7 +17,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:id="@+id/fon"
-            android:layout_height="360dp">
+            android:layout_height="match_parent">
 
             <ImageView
 
@@ -41,7 +41,7 @@
                 android:layout_centerInParent="true"
                 android:inputType="textMultiLine|textVisiblePassword|textNoSuggestions"
                 android:layout_margin="24dp"
-                android:background="@drawable/login_btn_fon"
+                android:background="@null"
                 android:hint="@string/what_is_new"
                 android:descendantFocusability="blocksDescendants"
                 android:paddingBottom="15dp"
@@ -167,8 +167,8 @@
 
             <View
                 android:layout_width="match_parent"
-                android:alpha="0.92"
                 android:background="@color/white"
+                android:alpha="0.92"
                 android:layout_height="match_parent"/>
 
             <LinearLayout
