--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/content"
                 android:layout_height="match_parent"/>
 
-            <EditText
+            <com.nandy.vkchanllenge.HighlightedEditText
                 android:layout_gravity="center"
                 android:id="@+id/text_view"
                 style="@style/TextStyle5"
