--- a/app/src/main/res/layout/popup_backgrounds.xml
+++ b/app/src/main/res/layout/popup_backgrounds.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_gravity="center_vertical"
     android:background="@color/white"
+    android:id="@+id/layout_backgrounds"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
