--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     
     android:layout_height="match_parent"
-    tools:context="com.nandy.vkchanllenge.MainActivity">
+    tools:context="com.nandy.vkchanllenge.acitivity.MainActivity">
 
 
         <FrameLayout
