--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <com.nandy.vkchanllenge.HighlightedEditText
+            <com.nandy.vkchanllenge.widget.HighlightedEditText
                 android:id="@+id/text_view"
                 style="@style/TextStyle5"
                 android:layout_width="wrap_content"
